[package]
name = "blackdragonchest"
version = "0.1.0"
edition = "2021"
authors = ["Raphael Hoang (bkict.sonhoang@gmail.com)"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "=5.1.0"
borsh = "1.5.1"
rand= "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
near-sdk-macros = "=5.1.0"


[build-dependencies]
cc = "1.0"

[profile.release]
panic = "abort"
opt-level = "z"

