[package]
name = "blackdragonchest"
version = "0.1.0"
edition = "2021"
authors = ["Raphael Hoang (bkict.sonhoang@gmail.com)"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.1.0", features = ["legacy"] }
borsh = "1.5.1"
rand= "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
near-sdk-macros = "=5.1.0"
wee_alloc = { version = "0.4.5" }


[build-dependencies]
cc = "1.0"

[profile.release]
panic = "abort"
opt-level = "z"

